<resources>
    <string name="app_name">MovieApp2</string>
    <string name="login">Login</string>
    <string name="enter_your_account_information">Enter your account information</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="don_t_have_any_account_yet">Don\'t have any account yet?</string>
    <string name="register">Register</string>
    <string name="please_register_to_continue">Please register to continue</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password_confirmation">Enter password confirmation</string>
    <string name="create_account">Create account</string>
    <string name="detail">Detail</string>
    <string name="movie_title">Transformer 4 : Age of Extinction</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome, </string>
    <string name="username_sample">Noori</string>
    <string name="home">Home</string>
    <string name="dummy_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet nec ullamcorper sit amet risus nullam eget. Faucibus interdum posuere lorem ipsum dolor sit. Euismod quis viverra nibh cras pulvinar mattis. Tincidunt eget nullam non nisi est sit amet facilisis magna. Pulvinar pellentesque habitant morbi tristique senectus et. Quis imperdiet massa tincidunt nunc pulvinar sapien et. Ipsum nunc aliquet bibendum enim facilisis. Semper risus in hendrerit gravida rutrum quisque. Etiam non quam lacus suspendisse faucibus interdum posuere lorem ipsum. Gravida arcu ac tortor dignissim convallis aenean et.</string>
    <string name="popular_movies">Discover Popular Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>