<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.user.LoginFragment">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/icon_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        android:textColor="@color/red4"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintEnd_toEndOf="@id/login_img"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@id/login_img"
        app:layout_constraintTop_toBottomOf="@id/login_img" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/enter_your_account_information"
        android:textSize="17sp"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="@id/tv_login_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/enter_email"
        app:layout_constraintEnd_toEndOf="@id/tv_login_title"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/tv_login" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_pass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/enter_password"
        app:layout_constraintEnd_toEndOf="@+id/layout_login_email"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/layout_login_email"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_email" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/login"
        android:backgroundTint="@color/red1"

        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/layout_login_pass"
        app:layout_constraintStart_toStartOf="@+id/layout_login_pass"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_pass" />

    <TextView
        android:id="@+id/tv_login_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:text="@string/don_t_have_any_account_yet"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@+id/tv_login_reg"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
    <TextView
        android:id="@+id/tv_login_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:text="@string/register"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/red6"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toEndOf="@+id/tv_login_acc"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintHorizontal_chainStyle="spread_inside"

        />

</androidx.constraintlayout.widget.ConstraintLayout>