<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.user.ProfileActivity">



    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/profile"
        android:textSize="22sp"
        android:textColor="@color/red4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        app:layout_constraintStart_toStartOf="@id/tv_profile"
        app:layout_constraintEnd_toEndOf="@id/tv_profile"
        />

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/btn_add_img"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginStart="90dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:backgroundTint="@color/red8"-->
<!--        app:cardCornerRadius="300dp"-->
<!--        app:layout_constraintHorizontal_chainStyle="spread"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/btn_edit_img"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/img_profile">-->

<!--        <ImageView-->

<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginHorizontal="12dp"-->
<!--            android:src="@drawable/baseline_add_24" />-->
<!--    </androidx.cardview.widget.CardView>-->

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/btn_edit_img"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_marginEnd="90dp"-->
<!--        android:backgroundTint="@color/red8"-->
<!--        app:cardCornerRadius="300dp"-->
<!--        app:layout_constraintStart_toEndOf="@id/btn_add_img"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/img_profile">-->

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_add_img"
            android:layout_width="155dp"
            android:layout_height="35dp"
            app:icon="@drawable/baseline_add_24"
            android:text="Add image"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/red8"
            android:textColor="@color/black"
            app:iconTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/img_profile"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_edit_img"

        android:layout_width="155dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        app:icon="@drawable/baseline_edit_24"
        android:text="Edit image"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/red8"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        app:layout_constraintEnd_toEndOf="parent"/>
<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginHorizontal="12dp"-->
<!--            android:src="@drawable/baseline_edit_24" />-->
<!--    </androidx.cardview.widget.CardView>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/uname_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="105dp"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        app:layout_constraintStart_toStartOf="@id/img_profile"
        app:layout_constraintEnd_toEndOf="@id/img_profile">
        <EditText
            android:id="@+id/et_uname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:hint="@string/username"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullName_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/uname_layout"
        app:layout_constraintStart_toStartOf="@id/uname_layout"
        app:layout_constraintEnd_toEndOf="@id/uname_layout">
        <EditText
            android:id="@+id/et_fullName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:hint="@string/full_name"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dob_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/fullName_layout"
        app:layout_constraintStart_toStartOf="@id/fullName_layout"
        app:layout_constraintEnd_toEndOf="@id/fullName_layout">
        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:hint="@string/date_of_birth"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/dob_layout"
        app:layout_constraintStart_toStartOf="@id/dob_layout"
        app:layout_constraintEnd_toEndOf="@id/dob_layout">
        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:hint="@string/address"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red2"
        android:layout_marginTop="40dp"
        android:text="@string/update"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_layout" />

    <TextView
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/btn_update"
        app:layout_constraintStart_toStartOf="@id/btn_update"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="35dp"
        android:text="@string/logout"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/red6"/>

    <androidx.cardview.widget.CardView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/red2"
        app:cardCornerRadius="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="9dp"
            android:src="@drawable/baseline_arrow_back_ios_24" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>