<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/red7"
    tools:context=".presentation.ui.main.MainActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/welcome"
        android:layout_marginStart="20dp"
        android:textColor="@color/red5"
        android:textSize="15sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/username_sample"
        android:textColor="@color/red5"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/tv_welcome"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_profile"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:src="@drawable/baseline_account_circle_24"/>





    <!--    <TextView-->
    <!--        android:id="@+id/tv_logout"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="40dp"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:text="Logout"-->
    <!--        android:textSize="14sp"-->
    <!--        android:fontFamily="@font/poppins_bold"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/popular_movies"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_uname" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_home"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_list" />

</androidx.constraintlayout.widget.ConstraintLayout>