<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    tools:context=".presentation.ui.main.DetailActivity">


    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/detail"
        android:textSize="22sp"
        android:textColor="@color/red4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        tools:src="@tools:sample/avatars"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_detail"
        app:layout_constraintStart_toStartOf="@id/tv_detail"
        app:layout_constraintEnd_toEndOf="@id/tv_detail"
        />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/img_detail"
        app:layout_constraintStart_toStartOf="@id/img_detail"
        app:layout_constraintTop_toBottomOf="@id/img_detail"
        android:layout_marginTop="20dp"
        android:text="@string/movie_title"
        android:textColor="@color/red2"
        android:fontFamily="@font/poppins_extrabold"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_year"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Year: "
        android:textColor="@color/red6"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:id="@+id/tv_year_content"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintStart_toEndOf="@id/tv_year"
        android:text="2022"
        />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_year"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Overview"
        android:textColor="@color/red6"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:id="@+id/tv_desc_content"
        android:layout_height="300dp"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/dummy_desc"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/red2"
        app:cardCornerRadius="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="9dp"
            android:src="@drawable/baseline_arrow_back_ios_24" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>